compiler/lume_parse/src/snapshots/lume_parse__tests__call_snapshots@method_generic.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = a.call<T>(a, b);\")"
---
SOURCE_FILE@0..24
  LET_STMT@0..24
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    INSTANCE_CALL_EXPR@7..23
      WHITESPACE@7..8 " "
      NAME@8..9
        IDENT@8..9 "a"
      DOT@9..10 "."
      NAME@10..14
        IDENT@10..14 "call"
      GENERIC_ARGS@14..17
        LESS@14..15 "<"
        NAMED_TYPE@15..16
          PATH@15..16
            PATH_SEGMENT@15..16
              PATH_TYPE@15..16
                NAME@15..16
                  IDENT@15..16 "T"
        GREATER@16..17 ">"
      ARG_LIST@17..23
        LEFT_PAREN@17..18 "("
        VARIABLE_EXPR@18..19
          NAME@18..19
            IDENT@18..19 "a"
        COMMA@19..20 ","
        WHITESPACE@20..21 " "
        VARIABLE_EXPR@21..22
          NAME@21..22
            IDENT@21..22 "b"
        RIGHT_PAREN@22..23 ")"
    SEMICOLON@23..24 ";"
