compiler/lume_parse/src/snapshots/lume_parse__tests__call_snapshots@method_param_2.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = a.call(a, b);\")"
---
SOURCE_FILE@0..17
  LET_STMT@0..17
    LET_KW@0..3 "let"
    NAME@3..4
      IDENT@3..4 "_"
    ASSIGN@4..5 "="
    INSTANCE_CALL_EXPR@5..16
      IDENT@5..6 "a"
      DOT@6..7 "."
      NAME@7..11
        IDENT@7..11 "call"
      ARG_LIST@11..16
        LEFT_PAREN@11..12 "("
        VARIABLE_EXPR@12..13
          IDENT@12..13 "a"
        COMMA@13..14 ","
        VARIABLE_EXPR@14..15
          IDENT@14..15 "b"
        RIGHT_PAREN@15..16 ")"
    SEMICOLON@16..17 ";"
