compiler/lume_parse/src/snapshots/lume_parse__tests__call_snapshots@namespaced_static_method.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = std::io::Buffer::call(a, b);\")"
---
SOURCE_FILE@0..36
  LET_STMT@0..36
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    STATIC_CALL_EXPR@7..35
      WHITESPACE@7..8 " "
      PATH@8..29
        PATH_SEGMENT@8..11
          PATH_NAMESPACE@8..11
            IDENT@8..11 "std"
        PATH_SEP@11..13 "::"
        PATH_SEGMENT@13..15
          PATH_NAMESPACE@13..15
            IDENT@13..15 "io"
        PATH_SEP@15..17 "::"
        PATH_SEGMENT@17..23
          PATH_TYPE@17..23
            IDENT@17..23 "Buffer"
        PATH_SEP@23..25 "::"
        PATH_SEGMENT@25..29
          PATH_CALLABLE@25..29
            IDENT@25..29 "call"
      ARG_LIST@29..35
        LEFT_PAREN@29..30 "("
        VARIABLE_EXPR@30..31
          IDENT@30..31 "a"
        COMMA@31..32 ","
        WHITESPACE@32..33 " "
        VARIABLE_EXPR@33..34
          IDENT@33..34 "b"
        RIGHT_PAREN@34..35 ")"
    SEMICOLON@35..36 ";"
