compiler/lume_parse/src/snapshots/lume_parse__tests__call_snapshots@static_generic_method.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = Foo::call<T>(a, b);\")"
---
SOURCE_FILE@0..27
  LET_STMT@0..27
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    STATIC_CALL_EXPR@7..26
      WHITESPACE@7..8 " "
      PATH@8..20
        PATH_SEGMENT@8..11
          PATH_TYPE@8..11
            IDENT@8..11 "Foo"
        PATH_SEP@11..13 "::"
        PATH_SEGMENT@13..20
          PATH_CALLABLE@13..20
            IDENT@13..17 "call"
            GENERIC_ARGS@17..20
              LESS@17..18 "<"
              NAMED_TYPE@18..19
                PATH@18..19
                  PATH_SEGMENT@18..19
                    PATH_TYPE@18..19
                      IDENT@18..19 "T"
              GREATER@19..20 ">"
      ARG_LIST@20..26
        LEFT_PAREN@20..21 "("
        VARIABLE_EXPR@21..22
          IDENT@21..22 "a"
        COMMA@22..23 ","
        WHITESPACE@23..24 " "
        VARIABLE_EXPR@24..25
          IDENT@24..25 "b"
        RIGHT_PAREN@25..26 ")"
    SEMICOLON@26..27 ";"
