compiler/lume_parse/src/snapshots/lume_parse__tests__call_snapshots@static_method.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = Foo::call(a, b);\")"
---
SOURCE_FILE@0..20
  LET_STMT@0..20
    LET_KW@0..3 "let"
    NAME@3..4
      IDENT@3..4 "_"
    ASSIGN@4..5 "="
    STATIC_CALL_EXPR@5..19
      PATH@5..14
        PATH_TYPE@5..8
          IDENT@5..8 "Foo"
        PATH_SEP@8..10 "::"
        PATH_CALLABLE@10..14
          IDENT@10..14 "call"
      ARG_LIST@14..19
        LEFT_PAREN@14..15 "("
        VARIABLE_EXPR@15..16
          IDENT@15..16 "a"
        COMMA@16..17 ","
        VARIABLE_EXPR@17..18
          IDENT@17..18 "b"
        RIGHT_PAREN@18..19 ")"
    SEMICOLON@19..20 ";"
